# detector2d_plugin_template

./: README.md
example_pkg/: CMakeLists.txt  package.xml
example_pkg/example/: main.cpp
example_pkg/include/example_pkg/: example.hpp
example_pkg/src/: example.cpp
example_pkg_plugin/: CMakeLists.txt  example_pkg_plugin.xml  package.xml
example_pkg_plugin/include/example_pkg_plugin/: example_pkg_plugin.hpp
example_pkg_plugin/src/: example_pkg_plugin.cpp
