<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>example_pkg_plugin</name>
  <version>0.0.0</version>
  <description>TODO</description>
  <maintainer email="todo@example.com">TODO</maintainer>
  <license>Apache License 2.0</license>

  <buildtool_depend>ament_cmake_auto</buildtool_depend>

  <depend>detector2d_base</depend>
  <depend>detector2d_param</depend>
  <depend>example_pkg</depend>
  <depend>pluginlib</depend>
  <depend>vision_msgs</depend>

  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>

  <export>
    <build_type>ament_cmake</build_type>
    <detector2d_base plugin="${prefix}/example_pkg_plugin.xml" />
  </export>
</package>